# meetingpilot

./: .codexignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  architecture.md  package.json  pyproject.toml  requirements.txt
docs/: api.md  bad-cases.md  changelog.md  state.md
samples/: sample-meeting.txt
scripts/: run-app.ps1
src/meetingpilot/: __init__.py  app.py  config.py  exporters.py  llm_client.py  models.py  prompts.py  storage.py
